More Angular Upgrade followup fixes (#150)
* Fixed accent palette, made checkboxes not clickable where applicable, fixed duplciate asterisk on name field

* Fix org settings duplidate left nav and extra space

* Remove placeholder icon from nav

* Remove placeholder icon from nav

--- a/dash/frontend/src/styles.scss
+++ b/dash/frontend/src/styles.scss
@@ -13,7 +13,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 //Default theme
 $ms-default-primary: mat.define-palette(mat.$indigo-palette, 800, 300, 900);
-$ms-default-accent: mat.define-palette(mat.$light-blue-palette);
+$ms-default-accent: mat.define-palette(mat.$light-blue-palette, 800, 300, 900);
 $ms-default-warn: mat.define-palette(mat.$pink-palette, 600);
 
 $ms-button-styling: mat.define-typography-level(
